--- a/app/src/main/res/layout/content_convertir.xml
+++ b/app/src/main/res/layout/content_convertir.xml
@@ -23,7 +23,7 @@
         android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/textMonedaOrigen"
+        android:id="@+id/monedaorigen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -59,5 +59,12 @@
         android:layout_height="wrap_content"
         android:text="Valor de la divisa"
         android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/monedaresultado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
 </LinearLayout>
