--- a/app/src/main/res/layout/content_convertir.xml
+++ b/app/src/main/res/layout/content_convertir.xml
@@ -27,7 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        tools:text="1000" />
 
     <TextView
         android:id="@+id/textView5"
